New/service_prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prom-serv
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
