New/prom_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress-prom
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: questbusters.ru
      http:
        paths:
        - path: /prometheus
          pathType: Prefix
          backend:
            service:
              name: prom-serv
              port:
                number: 9090
